# rwshell

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
frontend/: 404.html  index.html  package-lock.json  package.json  rwshell.html  terminal.js
src/: args.rs  assets.rs  client.rs  error.rs  lib.rs  main.rs  pty.rs  server.rs  session.rs  websocket.rs
